--- a/scss/_home-mobile.scss
+++ b/scss/_home-mobile.scss
@@ -122,6 +122,7 @@
     .home-page {
         border: none;
         padding-right: 0;
+        padding-bottom: 160px;
     }
 
     .mobile-nav {
