--- a/scss/_song-mobile.scss
+++ b/scss/_song-mobile.scss
@@ -3,7 +3,7 @@
 
 @media screen and (max-width: 800px) {
     
-    .song-footer, .song-mob-nav, .bg, .overlay, .song-content .song-info, .tabs-bar, .lyrics-container .lyrics-toolbar {
+    .song-footer, .song-mob-navigation, .bg, .overlay, .song-content .song-info, .tabs-bar, .lyrics-container .lyrics-toolbar {
         display: none;
     }
 
